--- a/portfolio.html
+++ b/portfolio.html
@@ -27,27 +27,27 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+        <img src="assets/images/wordguess.jpg" alt="Word Guess" class="auth-image">
         
         <h3>Word Guess</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+        <img src="assets/images/RPG.png" alt="RPG Game" class="auth-image">
 
         <h3>RPG Game</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+        <img src="assets/images/trivia.jpg" alt="Trivia Game" class="auth-image">
 
         <h3>Trivia Game</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+        <img src="assets/images/rutg.png" alt="Rutgers Info Widget" class="auth-image">
 
         <h3>Rutgers Info Widget</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+        <img src="assets/images/RPS.png" alt="Rock Paper Scissors" class="auth-image">
 
         <h3>Rock Paper Scissors</h3>
       </div>
@@ -55,7 +55,7 @@
     </section>
 
   </div>
-
+  
   <footer>
     <div class="container">
       Copyright &copy; 
